--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,12 @@ authors = ["werner mendizabal <nonameentername@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+sqlalchemy = "^2.0.4"
+fastapi = "^0.92.0"
+uvicorn = "^0.20.0"
+psycopg2 = "^2.9.5"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
+[tool.poetry.group.dev.dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
