--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ sqlalchemy = "^2.0.4"
 fastapi = "^0.92.0"
 uvicorn = "^0.20.0"
 psycopg2 = "^2.9.5"
+alembic = "^1.10.1"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 
